modified Hw_task_1.ipynb in Seminar10

--- a/Seminar10/Hw_task_1.ipynb
+++ b/Seminar10/Hw_task_1.ipynb
@@ -30,6 +30,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
+    "# уравняла количество элементов в выборках\n",
     "y1 = np.array([173, 175, 180, 178, 177, 185, 183, 182, 180])\n",
     "y2 = np.array([177, 179, 180, 188, 177, 172, 171, 184, 180])\n",
     "y3 = np.array([172, 173, 169, 177, 166, 180, 178, 177, 172])\n",
@@ -80,11 +81,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0bae11b1",
    "metadata": {},
    "source": [
-    "Вывод: pvalue=0.01 < alpha=0.05 => попадаем в область принятия альтернативной гипотезы. \n",
+    "Вывод: pvalue=0.04 < alpha=0.05 => попадаем в область принятия альтернативной гипотезы. \n",
     "Есть различия среднего роста среди взрослых футболистов, хоккеистов и штангистов"
    ]
   }
